# langchain-gmy

./: .env  README.md  pyproject.toml  run.py
.superpowers/brainstorm/81773-1774061593/: .server-stopped  approach-layout.html  architecture-options.html
app/: __init__.py  config.py  intent_engine.py  main.py  min_chat.py  models.py
app/services/: __init__.py  knowledge_base.py  supply_analytics.py  workflow_automation.py
app/static/: app.js  index.html  styles.css
data/: knowledge_base.json  supply_records.json  workflow_catalog.json
demo/: demo1.py  index.html
docs/: 13.md  13_boss直聘短版.md  13_java微服务_ai版 copy.md  13_java微服务_ai版.md  13_招聘方视角精修版.md
docs/superpowers/specs/: 2026-03-21-multi-agent-workflow-studio-design.md  2026-03-27-production-intent-routing-system.md
enterprise_intent_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
langchain_gmy/: __init__.py
tests/: eval_dataset.json  test_api.py  test_evaluation.py  test_llm_payload.py  test_min_chat.py
